test/files/invalid/root_type_twice.fbs
// We do not currently use root types for anything... :(
root_type X;
root_type Y;